--- a/VMP-Mod.csproj
+++ b/VMP-Mod.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')"/>
+    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -15,7 +15,7 @@
         <Deterministic>true</Deterministic>
         <NuGetPackageImportStamp>
         </NuGetPackageImportStamp>
-        <TargetFrameworkProfile/>
+        <TargetFrameworkProfile />
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -153,15 +153,15 @@
         <Reference Include="ServerSync, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
             <HintPath>Libs\ServerSync.dll</HintPath>
         </Reference>
-        <Reference Include="System"/>
-        <Reference Include="System.Core"/>
-        <Reference Include="System.Numerics"/>
-        <Reference Include="System.Xml.Linq"/>
-        <Reference Include="System.Data.DataSetExtensions"/>
-        <Reference Include="Microsoft.CSharp"/>
-        <Reference Include="System.Data"/>
-        <Reference Include="System.Net.Http"/>
-        <Reference Include="System.Xml"/>
+        <Reference Include="System" />
+        <Reference Include="System.Core" />
+        <Reference Include="System.Numerics" />
+        <Reference Include="System.Xml.Linq" />
+        <Reference Include="System.Data.DataSetExtensions" />
+        <Reference Include="Microsoft.CSharp" />
+        <Reference Include="System.Data" />
+        <Reference Include="System.Net.Http" />
+        <Reference Include="System.Xml" />
         <Reference Include="UnityEngine">
             <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim\unstripped_corlib\UnityEngine.dll</HintPath>
             <Private>False</Private>
@@ -408,51 +408,52 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Patches\ExtendedPlayerInventory.cs"/>
-        <Compile Include="Patches\MoveableChestInventory.cs"/>
-        <Compile Include="Patches\QuickAccessBar.cs"/>
-        <Compile Include="Patches\SkillPatches.cs"/>
-        <Compile Include="Patches\ClockPatch.cs"/>
-        <Compile Include="Patches\PlantGrowth.cs"/>
-        <Compile Include="Patches\ClientPatches.cs"/>
-        <Compile Include="Patches\ServerPatches.cs"/>
-        <Compile Include="Patches\WorldPatches.cs"/>
-        <Compile Include="Utilities.cs"/>
-        <Compile Include="MapSharing\GameObjectAssistant.cs"/>
-        <Compile Include="MapSharing\ListExtensions.cs"/>
-        <Compile Include="MapSharing\Minimap.cs"/>
-        <Compile Include="MapSharing\RPCQueue.cs"/>
-        <Compile Include="MapSharing\VMPAck.cs"/>
-        <Compile Include="MapSharing\DataObjects.cs"/>
-        <Compile Include="MapSharing\MapPinSync.cs"/>
-        <Compile Include="MapSharing\MapSync.cs"/>
-        <Compile Include="MapSharing\ZPackageExtensions.cs"/>
-        <Compile Include="Patches\ChestSizePatch.cs"/>
-        <Compile Include="Patches\AutoStorePatch.cs"/>
-        <Compile Include="Patches\SignPatches.cs"/>
-        <Compile Include="Patches\WearNTear_Patches.cs"/>
-        <Compile Include="Patches\GamePatches.cs"/>
-        <Compile Include="Patches\MapDetail.cs"/>
-        <Compile Include="Patches\Inventory.cs"/>
-        <Compile Include="Patches\InventoryGUI.cs"/>
-        <Compile Include="Patches\CraftingPatches.cs"/>
-        <Compile Include="Patches\StationExtension.cs"/>
-        <Compile Include="Plugin.cs"/>
-        <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="Patches\ConnectionPanel.cs" />
+        <Compile Include="Patches\ExtendedPlayerInventory.cs" />
+        <Compile Include="Patches\MoveableChestInventory.cs" />
+        <Compile Include="Patches\QuickAccessBar.cs" />
+        <Compile Include="Patches\SkillPatches.cs" />
+        <Compile Include="Patches\ClockPatch.cs" />
+        <Compile Include="Patches\PlantGrowth.cs" />
+        <Compile Include="Patches\ClientPatches.cs" />
+        <Compile Include="Patches\ServerPatches.cs" />
+        <Compile Include="Patches\WorldPatches.cs" />
+        <Compile Include="Utilities.cs" />
+        <Compile Include="MapSharing\GameObjectAssistant.cs" />
+        <Compile Include="MapSharing\ListExtensions.cs" />
+        <Compile Include="MapSharing\Minimap.cs" />
+        <Compile Include="MapSharing\RPCQueue.cs" />
+        <Compile Include="MapSharing\VMPAck.cs" />
+        <Compile Include="MapSharing\DataObjects.cs" />
+        <Compile Include="MapSharing\MapPinSync.cs" />
+        <Compile Include="MapSharing\MapSync.cs" />
+        <Compile Include="MapSharing\ZPackageExtensions.cs" />
+        <Compile Include="Patches\ChestSizePatch.cs" />
+        <Compile Include="Patches\AutoStorePatch.cs" />
+        <Compile Include="Patches\SignPatches.cs" />
+        <Compile Include="Patches\WearNTear_Patches.cs" />
+        <Compile Include="Patches\GamePatches.cs" />
+        <Compile Include="Patches\MapDetail.cs" />
+        <Compile Include="Patches\Inventory.cs" />
+        <Compile Include="Patches\InventoryGUI.cs" />
+        <Compile Include="Patches\CraftingPatches.cs" />
+        <Compile Include="Patches\StationExtension.cs" />
+        <Compile Include="Plugin.cs" />
+        <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
-        <EmbeddedResource Include="Assets\Bundles\map-pin-ui"/>
+        <EmbeddedResource Include="Assets\Bundles\map-pin-ui" />
     </ItemGroup>
     <ItemGroup>
-        <None Include="packages.config"/>
+        <None Include="packages.config" />
     </ItemGroup>
-    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
-    <Import Project="packages\ILRepack.Lib.MSBuild.Task.2.0.18.2\build\ILRepack.Lib.MSBuild.Task.targets" Condition="Exists('packages\ILRepack.Lib.MSBuild.Task.2.0.18.2\build\ILRepack.Lib.MSBuild.Task.targets')"/>
+    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+    <Import Project="packages\ILRepack.Lib.MSBuild.Task.2.0.18.2\build\ILRepack.Lib.MSBuild.Task.targets" Condition="Exists('packages\ILRepack.Lib.MSBuild.Task.2.0.18.2\build\ILRepack.Lib.MSBuild.Task.targets')" />
     <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
         <PropertyGroup>
             <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them. For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
         </PropertyGroup>
-        <Error Condition="!Exists('packages\ILRepack.Lib.MSBuild.Task.2.0.18.2\build\ILRepack.Lib.MSBuild.Task.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\ILRepack.Lib.MSBuild.Task.2.0.18.2\build\ILRepack.Lib.MSBuild.Task.targets'))"/>
+        <Error Condition="!Exists('packages\ILRepack.Lib.MSBuild.Task.2.0.18.2\build\ILRepack.Lib.MSBuild.Task.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\ILRepack.Lib.MSBuild.Task.2.0.18.2\build\ILRepack.Lib.MSBuild.Task.targets'))" />
     </Target>
     <PropertyGroup>
         <PostBuildEvent>copy "$(TargetDir)OdinQOL.dll" "C:\Program Files (x86)\Steam\steamapps\common\Valheim-jotunn\BepInEx\plugins\OdinQOL.dll</PostBuildEvent>
