--- a/VMP-Mod.csproj
+++ b/VMP-Mod.csproj
@@ -125,6 +125,7 @@
         <Compile Include="Patches\BiFrost\BiFrost.cs" />
         <Compile Include="Patches\BiFrost\BiFrostFunctions.cs" />
         <Compile Include="Patches\BiFrost\BFPatches.cs" />
+        <Compile Include="Patches\Fermenter.cs" />
         <Compile Include="Patches\InventoryDiscard.cs" />
         <Compile Include="Patches\MoveableChestInventory.cs" />
         <Compile Include="Patches\QuickAccessBar.cs" />
@@ -155,6 +156,7 @@
         <Compile Include="Utilities\Configs\CraftingConfigs.cs" />
         <Compile Include="Utilities\Configs\EPIConfigs.cs" />
         <Compile Include="Utilities\Configs\BiFrostConfigs.cs" />
+        <Compile Include="Utilities\Configs\FermenterPatchConfigs.cs" />
         <Compile Include="Utilities\Configs\GamePatchConfigs.cs" />
         <Compile Include="Utilities\Configs\InvDiscardConfigs.cs" />
         <Compile Include="Utilities\Configs\MapDetailConfigs.cs" />
@@ -196,6 +198,6 @@
     </PropertyGroup>-->
     <Target Name="Copy" AfterTargets="ILRepack">
         <!--<Exec Command="copy /Y &quot;$(TargetDir)$(AssemblyName).dll&quot; &quot;C:\Users\crypt\AppData\Roaming\r2modmanPlus-local\Valheim\profiles\OdinQOL test\BepInEx\plugins\OdinPlus-OdinsQOL\$(AssemblyName).dll&quot;" />-->
-        <!--<Exec Command="copy /Y &quot;$(TargetDir)$(AssemblyName).dll&quot; &quot;C:\Users\crypt\AppData\Roaming\r2modmanPlus-local\Valheim\profiles\PermaTesting\BepInEx\plugins\OdinPlus-OdinsQOL\$(AssemblyName).dll&quot;" />-->
+        <Exec Command="copy /Y &quot;$(TargetDir)$(AssemblyName).dll&quot; &quot;C:\Users\crypt\AppData\Roaming\r2modmanPlus-local\Valheim\profiles\PermaTesting\BepInEx\plugins\OdinPlus-OdinsQOL\$(AssemblyName).dll&quot;" />
     </Target>
 </Project>
